--- a/public/index.html
+++ b/public/index.html
@@ -18,18 +18,37 @@
     <meta property="og:url" content="" />
     <!-- Will be set dynamically -->
 
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="" />
+    <meta name="twitter:title" content="JJC USA" />
+    <meta
+      name="twitter:description"
+      content="JJC USA is a non-profit organization, a branch of Jain Jagruti Centre Central Board Charitable Trust, formed in August 2019 with a motive to assist Jain community members living in the United States of America"
+    />
+    <meta name="twitter:image" content="" />
+
     <!-- Add a script to set the host URL and image dynamically -->
     <script>
       document.addEventListener('DOMContentLoaded', function () {
         var ogUrlMeta = document.querySelector('meta[property="og:url"]');
         var ogImageMeta = document.querySelector('meta[property="og:image"]');
+        var twiiterImageMeta = document.querySelector(
+          'meta[property="twitter:image"]'
+        );
+        var twitterUrl = document.querySelector('meta[property="twitter:url"]');
 
-        if (ogUrlMeta && ogImageMeta) {
+        if (ogUrlMeta && ogImageMeta && twiiterImageMeta && twitterUrl) {
           ogUrlMeta.setAttribute('content', window.location.origin);
+          twitterUrl.setAttribute('content', window.location.origin);
 
           // Set the image dynamically (replace 'your_image_path' with the actual path)
-          var imagePath = 'src/assets/images/together.png'; // Example path
+          var imagePath = 'static/media/together.37630334.png'; // Example path
           ogImageMeta.setAttribute(
+            'content',
+            window.location.origin + '/' + imagePath
+          );
+          twiiterImageMeta.setAttribute(
             'content',
             window.location.origin + '/' + imagePath
           );
